# databricks-app-template

./: .env.example  .gitignore  CLAUDE.md  COMMON_MISTAKES.md  README.md  TEMPLATE_GUIDE.md  app.yaml  deploy.sh  pyproject.toml  requirements.txt  start_app.sh  stop_app.sh
config/: config.yaml  deployment.example.yaml  deployment.yaml  deployment.yaml.bak  prompts.yaml  seed_profiles.yaml
db_app_deployment/: README.md  __init__.py  config.py  deploy.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
quickstart/: PREREQUISITES.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  check_system_dependencies.sh  create_python_environment.sh  setup.sh  setup_database.sh
scripts/: README.md  check_setup.py  init_database.py
src/api/: main.py
src/api/routes/: __init__.py  chat.py  sessions.py
src/api/routes/settings/: __init__.py  ai_infra.py  mlflow.py  profiles.py  prompts.py
src/api/schemas/: __init__.py  chat.py  session.py
src/api/schemas/settings/: __init__.py  requests.py  responses.py
src/api/services/: __init__.py  chat_service.py  session_manager.py  session_manager.py.bak
src/api/static/: index.html
src/core/: __init__.py  database.py  databricks_client.py  defaults.py  lakebase.py  settings.py  settings_db.py
src/database/models/: __init__.py  ai_infra.py  history.py  mlflow.py  profile.py  prompts.py  session.py
src/services/: __init__.py  chat_model.py  config_service.py  config_validator.py  profile_service.py
src/utils/: __init__.py  error_handling.py  logging_config.py
